syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}